# ROS2_learning

./: .gitignore  Doxyfile  JAZZY_MIGRATION_NOTES.md  README.md
.github/workflows/: main.yml
CPP/01 Just to start/: my_first_node.cpp  node_timer_without_class.cpp  node_with_class.cpp  node_with_class_and_timer.cpp
CPP/01 Start with simple nodes/: CMakeLists.txt  my_first_node.cpp
CPP/02 Publisher and subscriber/: CMakeLists.txt  package.xml  publish_custom_message.cpp  simple_publisher_class_node.cpp  simple_publisher_node.cpp  simple_subscriber_class_node.cpp  sub_pub_pipeline.cpp
CPP/03 Custom msg and srv/: CMakeLists.txt  package.xml
CPP/03 Custom msg and srv/srv/: CapitalFullName.srv
CPP/04 Service and client/: CMakeLists.txt  client_node.cpp  client_node_class.cpp  package.xml  service_node.cpp  service_node_class.cpp
CPP/05 Parameters/: CMakeLists.txt  package.xml  parameters.cpp  set_parameters.cpp
CPP/06 Plugins/vehicle_base/: CMakeLists.txt  package.xml
CPP/06 Plugins/vehicle_plugins/: CMakeLists.txt  package.xml
CPP/07 Actions/action_tutorial/: CMakeLists.txt
CPP/07 Actions/custom_action/: CMakeLists.txt  package.xml
CPP/actions/action_tutorial/: CMakeLists.txt  README.md  package.xml
CPP/actions/action_tutorial/src/: class_action_client.cpp  simple_action_client.cpp
CPP/actions/custom_action/: CMakeLists.txt  README.md
CPP/create_library_with_header/publisher_library/: CMakeLists.txt  README.md  package.xml
CPP/create_library_with_header/publisher_library/include/publisher_library/: publisher_library.h
CPP/create_library_with_header/publisher_library/src/: publisher_library.cpp
CPP/create_library_with_header/use_library/: CMakeLists.txt  README.md  package.xml
CPP/custom_msg_and_srv/: CMakeLists.txt  README.md  package.xml
CPP/dynamic_tf2_publisher/: CMakeLists.txt  README.md  dyn_tf2_pub.rviz  package.xml
CPP/dynamic_tf2_publisher/include/dynamic_tf2_publisher/: tf2_publisher.h
CPP/dynamic_tf2_publisher/launch/: tf2_pub.py
CPP/dynamic_tf2_publisher/src/: tf2_publisher.cpp  tf2_publisher_node.cpp
CPP/message_sync/: CMakeLists.txt  README.md  package.xml
CPP/message_sync/src/: message_sync.cpp
CPP/parameters/: CMakeLists.txt  README.md  package.xml
CPP/parameters/src/: parameters.cpp
CPP/plugins/vehicle_base/: CMakeLists.txt  README.md
CPP/plugins/vehicle_base/src/: create_vehicle.cpp
CPP/plugins/vehicle_plugins/: CMakeLists.txt  README.md  package.xml  plugins.xml
CPP/plugins/vehicle_plugins/src/: vehicle_plugins.cpp
CPP/publisher_and_subscriber/: CMakeLists.txt  README.md  package.xml
CPP/publisher_and_subscriber/msg/: EmployeeSalary.msg
CPP/publisher_and_subscriber/src/: publish_custom_message.cpp  simple_publisher_class_node.cpp  simple_publisher_node.cpp  simple_subscriber_node.cpp  sub_pub_pipeline.cpp
CPP/service_server_and_client/: CMakeLists.txt  README.md  package.xml
CPP/service_server_and_client/src/: client_node.cpp  client_node_class.cpp  service_node.cpp  service_node_class.cpp
CPP/start_with_simple_nodes/: CMakeLists.txt  README.md  package.xml
CPP/start_with_simple_nodes/src/: node_timer_with_class.cpp  node_timer_without_class.cpp  node_with_class.cpp
PYTHON/actions/action_tutorial_py/: README.md  package.xml  setup.cfg  setup.py
PYTHON/actions/action_tutorial_py/action_tutorial_py/: __init__.py  class_action_client.py  class_action_server.py  simple_action_client.py  simple_action_server.py
PYTHON/actions/custom_action_py/: CMakeLists.txt  README.md  package.xml
PYTHON/actions/custom_action_py/action/: Concatenate.action
PYTHON/create_library_with_header_py/publisher_library_py/: README.md  package.xml  setup.cfg  setup.py
PYTHON/create_library_with_header_py/publisher_library_py/publisher_library_py/: __init__.py  publisher_library.py
PYTHON/create_library_with_header_py/use_library_py/: README.md  package.xml  setup.cfg  setup.py
PYTHON/create_library_with_header_py/use_library_py/use_library_py/: __init__.py  use_library.py
PYTHON/custom_msg_and_srv_py/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
PYTHON/custom_msg_and_srv_py/custom_msg_and_srv_py/: __init__.py  capital_full_name_client.py  capital_full_name_server.py  formatting.py
PYTHON/custom_msg_and_srv_py/resource/: custom_msg_and_srv_py
PYTHON/custom_msg_and_srv_py/srv/: CapitalFullName.srv
PYTHON/custom_msg_and_srv_py/test/: test_capital_full_name.py
PYTHON/dynamic_tf2_publisher_py/: README.md  package.xml  setup.cfg  setup.py
PYTHON/dynamic_tf2_publisher_py/dynamic_tf2_publisher_py/: __init__.py  tf2_publisher.py  tf2_publisher_node.py
PYTHON/dynamic_tf2_publisher_py/launch/: tf2_pub.py
PYTHON/message_sync_py/: README.md  package.xml  setup.cfg  setup.py
PYTHON/message_sync_py/message_sync_py/: __init__.py  message_sync.py
PYTHON/parameters_py/: README.md  package.xml  setup.cfg  setup.py
PYTHON/parameters_py/parameters_py/: __init__.py  parameters_node.py
PYTHON/plugins/vehicle_base_py/: README.md  package.xml  setup.cfg  setup.py
PYTHON/plugins/vehicle_plugins_py/: README.md  package.xml  setup.cfg  setup.py
PYTHON/plugins/vehicle_plugins_py/vehicle_plugins_py/: __init__.py  create_vehicle.py  vehicle_plugins.py
PYTHON/publisher_and_subscriber_py/: README.md  package.xml  setup.cfg  setup.py
PYTHON/service_server_and_client_py/: README.md  package.xml  setup.cfg  setup.py
PYTHON/service_server_and_client_py/service_server_and_client_py/: __init__.py  client_node.py  client_node_class.py  service_node.py  service_node_class.py
PYTHON/start_with_simple_nodes_py/: README.md  package.xml  setup.cfg  setup.py
docker/: Dockerfile  README.md  attach_container.sh  build_image.sh  run_container.sh
docker/helpers/: build_clean.sh  build_packages.sh  copy_packages.sh  setup_workspace.sh
open_cv_node/: README.md
open_cv_node/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
open_cv_node/log/: latest_build
open_cv_node/ros2_cv/: setup.cfg  setup.py
ros2_cv/: setup.py
ros2_cv/ros2_cv/: face_detection.py  open_cv_integration.py
(+29 files in other folders)
