<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>custom_msg_and_srv_py</name>
  <version>0.0.0</version>
  <description>Python package with example nodes using the CapitalFullName service from custom_msg_and_srv.</description>
  <maintainer email="antoniomauro.galiano@gmail.com">Antonio Mauro Galiano</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>custom_msg_and_srv</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
