<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>message_sync_py</name>
  <version>1.0.0</version>
  <description>A ROS2 example package to synchronize messages from topics in Python</description>
  <maintainer email="dottantgal@users.noreply.github.com">Antonio Mauro Galiano</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>message_filters</depend>
  <depend>sensor_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

