<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>service_server_and_client_py</name>
  <version>0.0.0</version>
  <description>Example nodes to create service server and service client in Python</description>
  <maintainer email="foo@foo.foo">Antonio Mauro Galiano</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>custom_msg_and_srv_py</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

