<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>action_tutorial_py</name>
  <version>0.0.0</version>
  <description>Action based tutorial in Python</description>
  <maintainer email="user@todo.todo">Antonio Mauro Galiano</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>rclpy.action</depend>
  <depend>custom_action</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

