<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>publisher_library_py</name>
  <version>0.0.0</version>
  <description>A basic publisher library made with Python module</description>
  <maintainer email="antoniomauro.galiano@gmail.com">Antonio Mauro Galiano</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

