<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>use_library_py</name>
  <version>0.0.0</version>
  <description>A basic node to use the publisher library</description>
  <maintainer email="antoniomauro.galiano@gmail.com">Antonio Mauro Galiano</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>publisher_library_py</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

