<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vehicle_plugins_py</name>
  <version>0.0.0</version>
  <description>Plugin example in Python</description>
  <maintainer email="user@todo.todo">Antonio Mauro Galiano</maintainer>
  <license>TODO: License declaration</license>

  <depend>vehicle_base_py</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

